python_1block_test.txt
I might delete it later
for now, these are latest exercises
from learn python the hard way

I learned {} use 
(means: I am ready to operate an e-mail service)


>>> print(end1 + end2 + end3 + end4 + end5 + end6, end=' ')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'end1' is not defined
>>>  end1 = "C"
  File "<stdin>", line 1
    end1 = "C"
IndentationError: unexpected indent
>>>  end2 = "h"
  File "<stdin>", line 1
    end2 = "h"
IndentationError: unexpected indent
>>>  end3 = "e"
  File "<stdin>", line 1
    end3 = "e"
IndentationError: unexpected indent
>>>  end4 = "e"
  File "<stdin>", line 1
    end4 = "e"
IndentationError: unexpected indent
>>>  end5 = "s"
  File "<stdin>", line 1
    end5 = "s"
IndentationError: unexpected indent
>>>  end6 = "e"
  File "<stdin>", line 1
    end6 = "e"
IndentationError: unexpected indent
>>> end1 = "a"
>>> end2 = "b"
>>> end3= "c"
>>> end4 = "c"
>>> end4 = "d"
>>> end5 = "e"
>>> end6 = "f"
>>> print(end1 + end2 + end3 + end4 + end5 + end6, end=' ')
abcdef >>>
>>> print(end1 + end2 + end3 + end4 + end5 + end6)
abcdef
>>> print(end1 + end2 + end3 + end4 + end5 + end6, end=' ')
abcdef >>> print(end1 + end2 + end3 + end4 + end5 + end6, end=' ')
abcdef >>>
>>> print("this is a style to not end the line", now= " ")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'now' is an invalid keyword argument for print()
>>> print("this is a style to not end the line", end= " ")
this is a style to not end the line >>> answer = input()
yes it is
>>> print("this is a style to not end the line", end= " ", "{}")
  File "<stdin>", line 1
    print("this is a style to not end the line", end= " ", "{}")
                                                               ^
SyntaxError: positional argument follows keyword argument
>>> print("this is a style to not end the line","{}", end= " ")
this is a style to not end the line {} >>> correction = "be careful"
>>> print(f"this is a style to not end the line.","Actually, {answer}","You must {correction}.", end= " ")
this is a style to not end the line. Actually, {answer} You must {correction}. >>> print(f"this is a style to not end {3} the line.",f"Actually, {answer}",f"You must {correction}.", end= " ")
this is a style to not end 3 the line. Actually, yes it is You must be careful. >>>
>>> from sys import argv
>>> script one two three four = argv
  File "<stdin>", line 1
    script one two three four = argv
           ^
SyntaxError: invalid syntax
>>> script, one, two, three, four = argv
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: not enough values to unpack (expected 5, got 1)
>>> script, first, second, third = argv
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: not enough values to unpack (expected 4, got 1)
>>> argv
['']
>>> from sys import argv
>>> argv
['']
>>> print("enough, we left at ex14")
enough, we left at ex14
>>>